<resources>
    <string name="app_name">BillingClinic</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="locations">Locations</string>
    <string name="settings">Settings</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="profiles">Profiles</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="legal">Legal</string>
    <string name="no_internet">no internet</string>
    <string name="create">Create</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="save">Save</string>
    <string name="create_profile">CreateProfile</string>
</resources>
