<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_home_fragment"
        android:icon="@drawable/ic_services"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_appointments_fragment"
        android:icon="@drawable/ic_sd_new"
        android:title="@string/appointments"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_locations_fragment"
        android:icon="@drawable/ic_search"
        android:title="@string/locations"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_settings_fragment"
        android:icon="@drawable/ic_search"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>